--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -39,3 +39,21 @@
 .text-field--display .v-text-field--outlined.v-input--dense.v-text-field--single-line > .v-input__control > .v-input__slot, .v-text-field--outlined.v-input--dense.v-text-field--outlined > .v-input__control > .v-input__slot {
     min-height: 10px;
 }
+
+.search-keyword-field {
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+.search-keyword-field .v-input__control .v-input__slot {
+    min-height: 49px !important;
+}
+
+.search-keyword-field .v-input__append-outer {
+    margin: 0 !important;
+    background-color: green;
+    padding: 3px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
