--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,17 @@
+html {
+    background: #e6e6e6;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: black;
+        color: white;
+    }
+}
+
+.theme--light.v-application {
+    background: transparent;
+}
 
 .search-div {
     display: flex;
