--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,5 @@
 html {
-    background: #e6e6e6;
+    background: #e0e0e0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -26,9 +26,22 @@ html {
     }
 }
 
-.search-div .input-field {
-    background: #e0e0e03b;
+.theme--light .search-div .input-field {
+    background: #fff;
 }
+
+.search-div .input-field .v-text-field .v-input__control .v-input__slot .v-input__prepend-inner,
+.search-div .input-field .v-text-field .v-input__control .v-input__slot .v-input__append-inner {
+    padding-top: 4px;
+}
+
+.search-div .input-field .v-text-field .v-input__control .v-input__slot .v-text-field__slot input {
+    padding-top: 15px;
+}
+
+/*.theme--dark .search-div .input-field {*/
+/*    background: #e0e0e0;*/
+/*}*/
 
 .search-btn {
     display: flex;
