--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -52,7 +52,6 @@ html {
     border: 0;
     cursor: pointer;
     padding-left: 0 !important;
-    background: #009451 !important;
 }
 
 .v-text-field--rounded > .v-input__control > .v-input__slot {
@@ -73,14 +72,21 @@ html {
 }
 
 .search-keyword-field .v-input__control .v-input__slot {
-    min-height: 49px !important;
+    min-height: 45px !important;
+}
+
+.search-keyword-field.v-input--is-focused .v-input__append-outer {
+    padding: 0px !important;
+    border: 1px solid var(--v-primary-base);
+    border-left: none;
 }
 
 .search-keyword-field .v-input__append-outer {
     margin: 0 !important;
-    background-color: green;
-    padding: 3px;
+    background-color: var(--v-success-base);
+    padding: 1.5px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+
 
