--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -72,19 +72,19 @@ html {
 }
 
 .search-keyword-field .v-input__control .v-input__slot {
-    min-height: 45px !important;
+    min-height: 46.8px !important;
 }
 
 .search-keyword-field.v-input--is-focused .v-input__append-outer {
-    padding: 0px !important;
+    padding: 1px;
     border: 1px solid var(--v-primary-base);
     border-left: none;
 }
 
 .search-keyword-field .v-input__append-outer {
-    margin: 0 !important;
+    margin: 0px !important;
     background-color: var(--v-success-base);
-    padding: 1.5px;
+    padding: 1.9px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
