--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -72,21 +72,35 @@ html {
 }
 
 .search-keyword-field .v-input__control .v-input__slot {
-    min-height: 46.8px !important;
+    /*min-height: 46.8px !important;*/
+}
+
+.search-keyword-field .v-input__control {
+    margin-top: 1px;
 }
 
 .search-keyword-field.v-input--is-focused .v-input__append-outer {
-    padding: 1px;
     border: 1px solid var(--v-primary-base);
     border-left: none;
+}
+
+.search-keyword-field.v-input--is-focused .v-input__append-outer .v-btn {
+    padding: 28px 0px;
 }
 
 .search-keyword-field .v-input__append-outer {
     margin: 0px !important;
     background-color: var(--v-success-base);
-    padding: 1.9px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+}
+
+.search-keyword-field .v-input__append-outer .v-btn {
+    padding: 29px 0px;
+}
+
+.search-list .v-list-item:hover {
+    background-color: var(--v-accent-base);
 }
 
 
