--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -91,3 +91,10 @@ html {
     background-color: var(--v-accent-base);
 }
 
+.v-list--three-line .v-list-item .v-list-item__subtitle, .v-list-item--three-line .v-list-item__subtitle {
+    -webkit-line-clamp: 4;
+}
+
+.v-list--three-line .v-list-item .subtitle--height {
+    -webkit-line-clamp: unset;
+}
